@@ -7,6 +7,7 @@ Changelog for pdoTools.
 - [#8] Improved support of big numbers when sorting by TVs.
 - Fixed work of pdoPage when it called multiple times on page.
 - Fixed mistype in pdoFetch::getCollection().
+- New snippet pdoMenu.
 
 1.8.0 rc5
 ==============
